--- a/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb
+++ b/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import numba as nb\n",
     "import scipy as sp\n",
+    "import sympy as sy\n",
     "import matplotlib.pyplot as plt\n",
     "from pyXSteam.XSteam import XSteam\n",
     "import lebedev as l"
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,38 +1245,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\\int_S x^2+y^2-z^2 \\, d\\Omega = 4.188790204786399$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.188790204786399"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def f(x, y, z):\n",
-    "    return x**2 + y**2 - z**2\n",
-    "leb = l.getLebedevSphere(590)\n",
-    "v = f(leb['x'], leb['y'], leb['z'])\n",
-    "int = sum(v * leb['w'])\n",
-    "int"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1376,7 +1345,7 @@
     "# Scattering source anisotropy: 0 -- P0 (isotropic), 1 -- P1\n",
     "g['L'] = 0  # INPUT\n",
     "# Initialize the 'R' key in the 'g' dictionary\n",
-    "g['R'] = np.zeros((g['N'], int(2*g['L'] + 1), int(2*g['L'] + 1)))\n",
+    "g['R'] = np.zeros((int(g['N']), int(2*int(g['L']) + 1), int(2*int(g['L']) + 1)))\n",
     "# Calculate spherical harmonics for every ordinate\n",
     "for n in range(g['N']):\n",
     "    #g['R'][n] = np.zeros((2 * g['L'] + 1, 2 * g['L'] + 1))\n",
@@ -1452,19 +1421,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n"
+     ]
     }
    ],
    "source": [
-    "empty_array = np.empty((0,))\n",
-    "empty_array"
+    "print(type(g['N']))\n",
+    "print(type(g['L']))\n"
    ]
   },
   {
@@ -1668,96 +1635,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "keff =   0.85337 #nOuter =   1 nInner = 153.0 residual = 8.96607e-05 target = 1.00000e-04\n",
-      "keff =   1.02845 #nOuter =   2 nInner = 119.0 residual = 8.71436e-05 target = 1.00000e-04\n",
-      "keff =   1.09546 #nOuter =   3 nInner = 101.0 residual = 9.92004e-05 target = 1.00000e-04\n",
-      "keff =   1.11025 #nOuter =   4 nInner =  92.0 residual = 9.71821e-05 target = 1.00000e-04\n",
-      "keff =   1.11681 #nOuter =   5 nInner =  90.0 residual = 8.03417e-05 target = 1.00000e-04\n",
-      "keff =   1.12056 #nOuter =   6 nInner =  90.0 residual = 5.58296e-05 target = 1.00000e-04\n",
-      "keff =   1.12186 #nOuter =   7 nInner =  77.0 residual = 8.85466e-05 target = 1.00000e-04\n",
-      "keff =   1.12096 #nOuter =   8 nInner =  72.0 residual = 9.67635e-05 target = 1.00000e-04\n",
-      "keff =   1.11813 #nOuter =   9 nInner =  71.0 residual = 9.06411e-05 target = 1.00000e-04\n",
-      "keff =   1.11371 #nOuter =  10 nInner =  72.0 residual = 9.01633e-05 target = 1.00000e-04\n",
-      "keff =   1.10799 #nOuter =  11 nInner =  72.0 residual = 8.46075e-05 target = 1.00000e-04\n",
-      "keff =   1.10124 #nOuter =  12 nInner =  72.0 residual = 8.43629e-05 target = 1.00000e-04\n",
-      "keff =   1.09374 #nOuter =  13 nInner =  71.0 residual = 8.77703e-05 target = 1.00000e-04\n",
-      "keff =   1.08573 #nOuter =  14 nInner =  71.0 residual = 8.71694e-05 target = 1.00000e-04\n",
-      "keff =   1.07747 #nOuter =  15 nInner =  71.0 residual = 9.41525e-05 target = 1.00000e-04\n",
-      "keff =   1.06920 #nOuter =  16 nInner =  63.0 residual = 9.96046e-05 target = 1.00000e-04\n",
-      "keff =   1.06117 #nOuter =  17 nInner =  62.0 residual = 8.93984e-05 target = 1.00000e-04\n",
-      "keff =   1.05358 #nOuter =  18 nInner =  61.0 residual = 7.20360e-05 target = 1.00000e-04\n",
-      "keff =   1.04660 #nOuter =  19 nInner =  57.0 residual = 9.02910e-05 target = 1.00000e-04\n",
-      "keff =   1.04040 #nOuter =  20 nInner =  57.0 residual = 9.25647e-05 target = 1.00000e-04\n",
-      "keff =   1.03507 #nOuter =  21 nInner =  59.0 residual = 3.50209e-05 target = 1.00000e-04\n",
-      "keff =   1.03068 #nOuter =  22 nInner =  53.0 residual = 8.15278e-05 target = 1.00000e-04\n",
-      "keff =   1.02725 #nOuter =  23 nInner =  52.0 residual = 9.29784e-05 target = 1.00000e-04\n",
-      "keff =   1.02477 #nOuter =  24 nInner =  47.0 residual = 9.64203e-05 target = 1.00000e-04\n",
-      "keff =   1.02320 #nOuter =  25 nInner =  50.0 residual = 8.52721e-05 target = 1.00000e-04\n",
-      "keff =   1.02248 #nOuter =  26 nInner =  50.0 residual = 7.79983e-05 target = 1.00000e-04\n",
-      "keff =   1.02253 #nOuter =  27 nInner =  51.0 residual = 8.32453e-05 target = 1.00000e-04\n",
-      "keff =   1.02323 #nOuter =  28 nInner =  54.0 residual = 5.19728e-05 target = 1.00000e-04\n",
-      "keff =   1.02452 #nOuter =  29 nInner =  52.0 residual = 8.23271e-05 target = 1.00000e-04\n",
-      "keff =   1.02626 #nOuter =  30 nInner =  55.0 residual = 3.99761e-05 target = 1.00000e-04\n",
-      "keff =   1.02837 #nOuter =  31 nInner =  55.0 residual = 4.21831e-05 target = 1.00000e-04\n",
-      "keff =   1.03073 #nOuter =  32 nInner =  55.0 residual = 3.78620e-05 target = 1.00000e-04\n",
-      "keff =   1.03327 #nOuter =  33 nInner =  55.0 residual = 3.81422e-05 target = 1.00000e-04\n",
-      "keff =   1.03590 #nOuter =  34 nInner =  54.0 residual = 4.88276e-05 target = 1.00000e-04\n",
-      "keff =   1.03854 #nOuter =  35 nInner =  54.0 residual = 4.71502e-05 target = 1.00000e-04\n",
-      "keff =   1.04113 #nOuter =  36 nInner =  54.0 residual = 4.32914e-05 target = 1.00000e-04\n",
-      "keff =   1.04364 #nOuter =  37 nInner =  53.0 residual = 8.41565e-05 target = 1.00000e-04\n",
-      "keff =   1.04602 #nOuter =  38 nInner =  33.0 residual = 9.32167e-05 target = 1.00000e-04\n",
-      "keff =   1.04820 #nOuter =  39 nInner =  31.0 residual = 9.64908e-05 target = 1.00000e-04\n",
-      "keff =   1.05020 #nOuter =  40 nInner =  31.0 residual = 9.30806e-05 target = 1.00000e-04\n",
-      "keff =   1.05200 #nOuter =  41 nInner =  29.0 residual = 9.57894e-05 target = 1.00000e-04\n",
-      "keff =   1.05360 #nOuter =  42 nInner =  28.0 residual = 9.85877e-05 target = 1.00000e-04\n",
-      "keff =   1.05499 #nOuter =  43 nInner =  26.0 residual = 9.85544e-05 target = 1.00000e-04\n",
-      "keff =   1.05618 #nOuter =  44 nInner =  27.0 residual = 7.12335e-05 target = 1.00000e-04\n",
-      "keff =   1.05716 #nOuter =  45 nInner =  23.0 residual = 9.04139e-05 target = 1.00000e-04\n",
-      "keff =   1.05795 #nOuter =  46 nInner =  22.0 residual = 7.80282e-05 target = 1.00000e-04\n",
-      "keff =   1.05856 #nOuter =  47 nInner =  23.0 residual = 8.61957e-05 target = 1.00000e-04\n",
-      "keff =   1.05902 #nOuter =  48 nInner =  23.0 residual = 9.36897e-05 target = 1.00000e-04\n",
-      "keff =   1.05933 #nOuter =  49 nInner =  22.0 residual = 9.78872e-05 target = 1.00000e-04\n",
-      "keff =   1.05951 #nOuter =  50 nInner =  27.0 residual = 8.69484e-05 target = 1.00000e-04\n",
-      "keff =   1.05959 #nOuter =  51 nInner =  21.0 residual = 7.75342e-05 target = 1.00000e-04\n",
-      "keff =   1.05958 #nOuter =  52 nInner =  22.0 residual = 9.26312e-05 target = 1.00000e-04\n",
-      "keff =   1.05952 #nOuter =  53 nInner =  22.0 residual = 8.01405e-05 target = 1.00000e-04\n",
-      "keff =   1.05939 #nOuter =  54 nInner =  25.0 residual = 5.76387e-05 target = 1.00000e-04\n",
-      "keff =   1.05921 #nOuter =  55 nInner =  20.0 residual = 8.25274e-05 target = 1.00000e-04\n",
-      "keff =   1.05901 #nOuter =  56 nInner =  27.0 residual = 7.16437e-05 target = 1.00000e-04\n",
-      "keff =   1.05881 #nOuter =  57 nInner =  20.0 residual = 8.70958e-05 target = 1.00000e-04\n",
-      "keff =   1.05859 #nOuter =  58 nInner =  23.0 residual = 6.42160e-05 target = 1.00000e-04\n",
-      "keff =   1.05839 #nOuter =  59 nInner =  21.0 residual = 9.39251e-05 target = 1.00000e-04\n",
-      "keff =   1.05819 #nOuter =  60 nInner =  19.0 residual = 9.97583e-05 target = 1.00000e-04\n",
-      "keff =   1.05800 #nOuter =  61 nInner =  20.0 residual = 8.57551e-05 target = 1.00000e-04\n",
-      "keff =   1.05785 #nOuter =  62 nInner =  16.0 residual = 9.25786e-05 target = 1.00000e-04\n",
-      "keff =   1.05771 #nOuter =  63 nInner =  21.0 residual = 5.02840e-05 target = 1.00000e-04\n",
-      "keff =   1.05761 #nOuter =  64 nInner =  20.0 residual = 6.92739e-05 target = 1.00000e-04\n",
-      "keff =   1.05753 #nOuter =  65 nInner =  22.0 residual = 5.09013e-05 target = 1.00000e-04\n",
-      "keff =   1.05747 #nOuter =  66 nInner =  10.0 residual = 8.14181e-05 target = 1.00000e-04\n",
-      "keff =   1.05743 #nOuter =  67 nInner =   9.0 residual = 9.30405e-05 target = 1.00000e-04\n",
-      "keff =   1.05742 #nOuter =  68 nInner =  13.0 residual = 7.40744e-05 target = 1.00000e-04\n",
-      "keff =   1.05742 #nOuter =  69 nInner =   7.0 residual = 8.99182e-05 target = 1.00000e-04\n",
-      "keff =   1.05743 #nOuter =  70 nInner =   7.0 residual = 8.42743e-05 target = 1.00000e-04\n",
-      "keff =   1.05746 #nOuter =  71 nInner =   7.0 residual = 7.72667e-05 target = 1.00000e-04\n",
-      "keff =   1.05749 #nOuter =  72 nInner =   7.0 residual = 7.22467e-05 target = 1.00000e-04\n",
-      "keff =   1.05754 #nOuter =  73 nInner =   4.0 residual = 9.61325e-05 target = 1.00000e-04\n",
-      "keff =   1.05757 #nOuter =  74 nInner =   7.0 residual = 7.29382e-05 target = 1.00000e-04\n",
-      "keff =   1.05762 #nOuter =  75 nInner =   4.0 residual = 9.20164e-05 target = 1.00000e-04\n",
-      "keff =   1.05767 #nOuter =  76 nInner =   7.0 residual = 7.09743e-05 target = 1.00000e-04\n",
-      "keff =   1.05773 #nOuter =  77 nInner =   3.0 residual = 9.65194e-05 target = 1.00000e-04\n",
-      "keff =   1.05777 #nOuter =  78 nInner =   5.0 residual = 8.88375e-05 target = 1.00000e-04\n",
-      "keff =   1.05783 #nOuter =  79 nInner =   4.0 residual = 9.84782e-05 target = 1.00000e-04\n",
-      "keff =   1.05788 #nOuter =  80 nInner =   5.0 residual = 8.43486e-05 target = 1.00000e-04\n",
-      "keff =   1.05793 #nOuter =  81 nInner =   4.0 residual = 9.46899e-05 target = 1.00000e-04\n",
-      "keff =   1.05797 #nOuter =  82 nInner =   4.0 residual = 9.70994e-05 target = 1.00000e-04\n",
-      "keff =   1.05802 #nOuter =  83 nInner =   5.0 residual = 7.93892e-05 target = 1.00000e-04\n",
-      "keff =   1.05807 #nOuter =  84 nInner =   4.0 residual = 8.60877e-05 target = 1.00000e-04\n",
-      "keff =   1.05811 #nOuter =  85 nInner =   4.0 residual = 8.84127e-05 target = 1.00000e-04\n",
-      "keff =   1.05815 #nOuter =  86 nInner =   4.0 residual = 8.71134e-05 target = 1.00000e-04\n",
-      "keff =   1.05819 #nOuter =  87 nInner =   4.0 residual = 9.06969e-05 target = 1.00000e-04\n",
-      "keff =   1.05823 #nOuter =  88 nInner =   4.0 residual = 8.09126e-05 target = 1.00000e-04\n",
-      "keff =   1.05827 #nOuter =  89 nInner =   0.0 residual = 9.57518e-05 target = 1.00000e-04\n",
-      "Iterations finished.\n"
+      "keff =   0.85337 #nOuter =   1 nInner = 152.0 residual = 9.93000e-05 target = 1.00000e-04\n",
+      "keff =   1.02845 #nOuter =   2 nInner = 118.0 residual = 9.02870e-05 target = 1.00000e-04\n",
+      "keff =   1.09549 #nOuter =   3 nInner = 102.0 residual = 9.92335e-05 target = 1.00000e-04\n",
+      "keff =   1.11027 #nOuter =   4 nInner =  93.0 residual = 9.66651e-05 target = 1.00000e-04\n",
+      "keff =   1.11682 #nOuter =   5 nInner =  90.0 residual = 7.96054e-05 target = 1.00000e-04\n",
+      "keff =   1.12057 #nOuter =   6 nInner =  89.0 residual = 7.86415e-05 target = 1.00000e-04\n",
+      "keff =   1.12188 #nOuter =   7 nInner =  91.0 residual = 7.32634e-05 target = 1.00000e-04\n",
+      "keff =   1.12093 #nOuter =   8 nInner =  72.0 residual = 9.90718e-05 target = 1.00000e-04\n",
+      "keff =   1.11811 #nOuter =   9 nInner =  72.0 residual = 9.48826e-05 target = 1.00000e-04\n",
+      "keff =   1.11369 #nOuter =  10 nInner =  71.0 residual = 9.93886e-05 target = 1.00000e-04\n",
+      "keff =   1.10797 #nOuter =  11 nInner =  72.0 residual = 8.39309e-05 target = 1.00000e-04\n",
+      "keff =   1.10124 #nOuter =  12 nInner =  72.0 residual = 8.60295e-05 target = 1.00000e-04\n",
+      "keff =   1.09373 #nOuter =  13 nInner =  71.0 residual = 9.40512e-05 target = 1.00000e-04\n",
+      "keff =   1.08573 #nOuter =  14 nInner =  72.0 residual = 7.29307e-05 target = 1.00000e-04\n",
+      "keff =   1.07747 #nOuter =  15 nInner =  72.0 residual = 6.75082e-05 target = 1.00000e-04\n",
+      "keff =   1.06920 #nOuter =  16 nInner =  66.0 residual = 8.72110e-05 target = 1.00000e-04\n",
+      "keff =   1.06117 #nOuter =  17 nInner =  62.0 residual = 8.95850e-05 target = 1.00000e-04\n",
+      "keff =   1.05358 #nOuter =  18 nInner =  61.0 residual = 7.33032e-05 target = 1.00000e-04\n",
+      "keff =   1.04661 #nOuter =  19 nInner =  56.0 residual = 9.07853e-05 target = 1.00000e-04\n",
+      "keff =   1.04041 #nOuter =  20 nInner =  56.0 residual = 7.97965e-05 target = 1.00000e-04\n",
+      "keff =   1.03508 #nOuter =  21 nInner =  60.0 residual = 3.34313e-05 target = 1.00000e-04\n",
+      "keff =   1.03068 #nOuter =  22 nInner =  53.0 residual = 9.57489e-05 target = 1.00000e-04\n",
+      "keff =   1.02725 #nOuter =  23 nInner =  53.0 residual = 4.85405e-05 target = 1.00000e-04\n",
+      "keff =   1.02478 #nOuter =  24 nInner =  46.0 residual = 9.92071e-05 target = 1.00000e-04\n",
+      "keff =   1.02321 #nOuter =  25 nInner =  47.0 residual = 9.93070e-05 target = 1.00000e-04\n",
+      "keff =   1.02249 #nOuter =  26 nInner =  51.0 residual = 9.66676e-05 target = 1.00000e-04\n",
+      "keff =   1.02253 #nOuter =  27 nInner =  55.0 residual = 8.13282e-05 target = 1.00000e-04\n",
+      "keff =   1.02325 #nOuter =  28 "
+     ]
+    },
+    {
+     "ename": "SystemError",
+     "evalue": "CPUDispatcher(<function numba_bicgstab at 0x7f786e7425f0>) returned a result with an exception set",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[0;32m~/envs/python3.10/lib/python3.10/site-packages/numba/core/serialize.py:30\u001b[0m, in \u001b[0;36m_numba_unpickle\u001b[0;34m(address, bytedata, hashed)\u001b[0m\n\u001b[1;32m     27\u001b[0m _unpickled_memo \u001b[39m=\u001b[39m {}\n\u001b[0;32m---> 30\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_numba_unpickle\u001b[39m(address, bytedata, hashed):\n\u001b[1;32m     31\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Used by `numba_unpickle` from _helperlib.c\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \n\u001b[1;32m     33\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39m        unpickled object\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mSystemError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb Cell 15\u001b[0m line \u001b[0;36m9\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=88'>89</a>\u001b[0m params \u001b[39m=\u001b[39m [errtol, maxit]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m \u001b[39m# Call the Numba CUSTOM bicgstab solver\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m solution, r, nInner \u001b[39m=\u001b[39m numba_bicgstab(guess,     RHS,    errtol, maxit,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=92'>93</a>\u001b[0m                                     g[\u001b[39m\"\u001b[39;49m\u001b[39mN\u001b[39;49m\u001b[39m\"\u001b[39;49m],      g[\u001b[39m\"\u001b[39;49m\u001b[39mnNodesX\u001b[39;49m\u001b[39m\"\u001b[39;49m],  g[\u001b[39m\"\u001b[39;49m\u001b[39mnNodesY\u001b[39;49m\u001b[39m\"\u001b[39;49m], \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=93'>94</a>\u001b[0m                                     g[\u001b[39m\"\u001b[39;49m\u001b[39mmuX\u001b[39;49m\u001b[39m\"\u001b[39;49m],    g[\u001b[39m\"\u001b[39;49m\u001b[39mmuY\u001b[39;49m\u001b[39m\"\u001b[39;49m],      g[\u001b[39m\"\u001b[39;49m\u001b[39mmuZ\u001b[39;49m\u001b[39m\"\u001b[39;49m], \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=94'>95</a>\u001b[0m                                     g[\u001b[39m\"\u001b[39;49m\u001b[39mnRefX\u001b[39;49m\u001b[39m\"\u001b[39;49m],  g[\u001b[39m\"\u001b[39;49m\u001b[39mnRefY\u001b[39;49m\u001b[39m\"\u001b[39;49m],    g[\u001b[39m\"\u001b[39;49m\u001b[39mnRefZ\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=95'>96</a>\u001b[0m                                     g[\u001b[39m\"\u001b[39;49m\u001b[39mdelta\u001b[39;49m\u001b[39m\"\u001b[39;49m], \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=96'>97</a>\u001b[0m                                     SigT\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=97'>98</a>\u001b[0m                                 )\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=99'>100</a>\u001b[0m \u001b[39m# Compute the relative residual error (residual) for this iteration\u001b[39;00m\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/siim/Documents/BTE/ReactorPhysics_Python/04.Discrete.Ordinates/testDO_v2.ipynb#X16sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m residual\u001b[39m.\u001b[39mappend(r[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(RHS))\n",
+      "\u001b[0;31mSystemError\u001b[0m: CPUDispatcher(<function numba_bicgstab at 0x7f786e7425f0>) returned a result with an exception set"
      ]
     }
    ],
