--- a/ReactorPhysics_Python/00.Lib/testPWR_mix.ipynb
+++ b/ReactorPhysics_Python/00.Lib/testPWR_mix.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#******************************************************************\n",
+    "# This code is released under the GNU General Public License (GPL).\n",
+    "#******************************************************************"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import re\n",
     "import sys\n",
     "import h5py\n",
@@ -16,12 +27,12 @@
     "import matplotlib.pyplot as plt\n",
     "from pyXSteam.XSteam import XSteam\n",
     "#from scipy.interpolate import interp1d\n",
-    "#from scipy.sparse import coo_matrix\n"
+    "#from scipy.sparse import coo_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +41,7 @@
        "'# Global HDF5 structure\\nglobal_g = None\\n\\ndef create_hdf5_structure():\\n    global global_g\\n    with h5py.File(\"data.h5\", \"w\") as file:\\n        group = file.create_group(\"g\")\\n        group.attrs[\"nz\"] = 10\\n        global_g = group\\n\\ndef access_hdf5_structure():\\n    global global_g\\n    # Access and use the global HDF5 structure\\n    if global_g is not None:\\n        with h5py.File(\"data.h5\", \"r\") as file:\\n            nz = file[\"g\"].attrs[\"nz\"]\\n            print(\"nz =\", nz)\\n\\ncreate_hdf5_structure()\\naccess_hdf5_structure()\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +288,7 @@
        "3628800"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +315,7 @@
        "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +343,7 @@
        "'import numpy as np\\n\\n# Global structure with geometry parameters\\n#g = {}\\n\\n#def createPWR_like_mix():\\n#global g\\n\\n#PWRmix = {}\\nPWRmix_ng = 421\\n\\n# Path to library\\nsys.path.append(\\'..\\\\00.Lib\\')\\n\\n# Input and initialize the geometry of the PWR-like unit cell\\nfrom input_and_initialize_PWR_like import input_and_initialize_PWR_like\\ninput_and_initialize_PWR_like()\\n\\n# Path to microscopic cross section data\\nsys.path.append(\\'..\\\\01.Micro.XS.421g\\')\\n\\n# Call the functions for UO2 isotopes and store the data in the structures\\nfrom micro_U_235__600K import micro_U_235__600K\\nfrom micro_U_238__600K import micro_U_238__600K\\nfrom micro_O_016__600K import micro_O_016__600K\\nU235 = micro_U_235__600K()\\nU238 = micro_U_238__600K()\\nO16 = micro_O_016__600K()\\nPWRmix[\\'eg\\'] = U235[\\'eg\\']\\n\\n# UO2 ceramic fuel is manufactured with the density lower than the theoretical density\\npor = 0.05\\n\\n# Uranium is composed of two uranium isotopes: U235 and U238\\nmolEnrich = 0.03\\n\\n# The molar fractions of U235 and U238\\nmolFrU = np.zeros(2)\\nmolFrU[0] = molEnrich\\nmolFrU[1] = 1 - molFrU[0]\\n\\n# Mass of one \"average\" UO2 molecule in atomic unit mass [a.u.m.]\\nUO2_03 = {}\\nUO2_03[\\'aw\\'] = U235[\\'aw\\'] * molFrU[0] + U238[\\'aw\\'] * molFrU[1] + O16[\\'aw\\'] * 2.0\\n\\n# Path to material properties\\nsys.path.append(\\'..\\\\00.Lib\\')\\nfrom matpro import matpro\\n_, _, fuel = matpro([], [], {})\\n\\n# The UO2 fuel density is theoretical density times 1 - porosity\\nUO2_03[\\'den\\'] = fuel[\\'rho\\'] * 1e-3 * (1 - por)  # [g/cm3]\\nrho = UO2_03[\\'den\\'] * 1.0e-24  # [g/(barn*cm)]\\nrho = rho / 1.660538e-24  # [(a.u.m.)/(barn*cm)]\\nrho = rho / UO2_03[\\'aw\\']  # [number of UO2 molecules/(barn*cm)]\\n\\n# The names of fissionable isotopes and oxygen\\nUO2_03[\\'isoName\\'] = [\\'U235\\', \\'U238\\', \\'O16\\']\\n\\n# The number densities of fissionable isotopes and oxygen\\nUO2_03[\\'numDen\\'] = np.zeros(3)\\nUO2_03[\\'numDen\\'][0] = molFrU[0] * rho * g[\\'fuel\\'][\\'vFrac\\']\\nUO2_03[\\'numDen\\'][1] = molFrU[1] * rho * g[\\'fuel\\'][\\'vFrac\\']\\nUO2_03[\\'numDen\\'][2] = 2 * rho * g[\\'fuel\\'][\\'vFrac\\']\\n\\n   \\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
