--- a/ReactorPhysics_Python/00.Lib/testPWR_mix_backup.ipynb
+++ b/ReactorPhysics_Python/00.Lib/testPWR_mix_backup.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#******************************************************************\n",
+    "# This code is released under the GNU General Public License (GPL).\n",
+    "#******************************************************************"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
