--- a/ReactorPhysics_Python/00.sphericalHarmonics/LebedevSphearIntegral.ipynb
+++ b/ReactorPhysics_Python/00.sphericalHarmonics/LebedevSphearIntegral.ipynb
@@ -107,7 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#******************************************************************\n",
+    "# This code is released under the GNU General Public License (GPL).\n",
+    "#******************************************************************"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +152,7 @@
        "phi"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +179,7 @@
        "[           cos(phi),           -r*sin(phi),                      0]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +211,7 @@
        "r**2*sin(phi)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +238,7 @@
        "[r**2*sin(phi)*sin(theta)**2*cos(phi) + r**2*sin(phi)*cos(phi)*cos(theta)**2]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +264,7 @@
        "sqrt(r**4*sin(phi)**2)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +287,7 @@
        "4*pi/3"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +309,7 @@
        "4.1887902047863905"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numerical result: 4.1887902047863905\n",
-      "Error: 2.4797939807798367e-13\n"
+      "Numerical result: 4.188790204786391\n",
+      "Error: 2.4797939807798317e-13\n"
      ]
     }
    ],
@@ -354,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +374,7 @@
        "4.188790204786399"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
