--- a/ReactorPhysics_Python/01.Micro.XS.421g/testPython.ipynb
+++ b/ReactorPhysics_Python/01.Micro.XS.421g/testPython.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#******************************************************************\n",
+    "# This code is released under the GNU General Public License (GPL).\n",
+    "#\n",
+    "# Siim Erik Pugal, 2023-2024\n",
+    "#******************************************************************"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
