--- a/ReactorPhysics_Python/01.Micro.XS.421g/sparseTest.ipynb
+++ b/ReactorPhysics_Python/01.Micro.XS.421g/sparseTest.ipynb
@@ -6,6 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#******************************************************************\n",
+    "# This code is released under the GNU General Public License (GPL).\n",
+    "#\n",
+    "# Siim Erik Pugal, 2023-2024\n",
+    "#******************************************************************"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "from numba import njit, int64, float64, int32\n",
     "from scipy import sparse\n",
@@ -14,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +37,7 @@
       "[[0.  0.  0.1]\n",
       " [0.  0.2 0. ]\n",
       " [0.3 0.  0. ]]\n",
-      "(array([0.1, 0.2, 0.3]), array([0, 1, 2]), array([2, 1, 0], dtype=int32))\n",
+      "(array([0.1, 0.2, 0.3]), array([0, 1, 2], dtype=int64), array([2, 1, 0]))\n",
       "  (0, 2)\t0.1\n",
       "  (1, 1)\t0.2\n",
       "  (2, 0)\t0.3\n"
@@ -32,7 +45,8 @@
     }
    ],
    "source": [
-    "@njit((float64[:], int64[:], int64[:], int64), fastmath=True)\n",
+    "#@njit((float64[:], int64[:], int64[:], int64), fastmath=True)\n",
+    "@njit\n",
     "def create_sparse_matrix(data, rows, cols, nrows):\n",
     "    nnz = len(data)\n",
     "\n",
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,9 +101,9 @@
      "text": [
       "Number of iterations: 100000\n",
       "Benchmark Results:\n",
-      "scipy.sparse.coo_matrix: 4.520122281996009\n",
-      "NumPy and Numba: 0.5367461060013738\n",
-      "Speedup: 8.42x\n"
+      "scipy.sparse.coo_matrix: 2.4340428999985306\n",
+      "NumPy and Numba: 0.3933522000006633\n",
+      "Speedup: 6.19x\n"
      ]
     }
    ],
@@ -145,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
