--- a/ReactorPhysics_Python/00.Lib/testPWR_mix.ipynb
+++ b/ReactorPhysics_Python/00.Lib/testPWR_mix.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "#******************************************************************\n",
     "# This code is released under the GNU General Public License (GPL).\n",
+    "#\n",
+    "# Siim Erik Pugal, 2023-2024\n",
     "#******************************************************************"
    ]
   },
