--- a/ReactorPhysics_Python/00.sphericalHarmonics/LebedevSphearIntegral.ipynb
+++ b/ReactorPhysics_Python/00.sphericalHarmonics/LebedevSphearIntegral.ipynb
@@ -113,6 +113,8 @@
    "source": [
     "#******************************************************************\n",
     "# This code is released under the GNU General Public License (GPL).\n",
+    "#\n",
+    "# Siim Erik Pugal, 2023-2024\n",
     "#******************************************************************"
    ]
   },
